initial fixes